namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: team-red
  labels:
    name: team-red
