service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: team-red-app
  namespace: ats
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  type: ClusterIP
  selector:
    app: team-red-app
