ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: team-red
  name: team-red-app
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/healthcheck-path: /status
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "2" # 2-10
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "5" # 5-300
    alb.ingress.kubernetes.io/success-codes: 200-300
    alb.ingress.kubernetes.io/group.name: peo-dev
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Env=dev
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: >-
      arn:aws:acm:us-west-2:542218630570:certificate/2d3f2cdd-f4b1-4f6c-a0ee-6d0ccb7afb89
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    external-dns.alpha.kubernetes.io/hostname: team-red-app.eks-we-dev.wizehiredev.com
spec:
  ingressClassName: alb
  rules:
    - host: team-red-app.eks-we-dev.wizehiredev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: team-red-app
                port:
                  name: http
